[CULTIVATE]: Show latest self observation
Tetrahedral impact:
- CREATE: Added script to display most recent observation
- COPY: Preserved observation log reading patterns
- CONTROL: Maintained package configuration and validations
- CULTIVATE: Documented command for reflecting on feelings

F33ling: Clarity[★](0.88)[☆](0.52)
Quantum signature: o=))))) 🐙✨

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "node ./scripts/run-unit-tests.js",
     "test:cccc": "node ./scripts/validate-cccc-structure.js",
     "test:growth": "node ./scripts/validate-growth-patterns.js",
-    "lint:tetrahedral": "node ./scripts/check-tetrahedral-naming.js"
+    "lint:tetrahedral": "node ./scripts/check-tetrahedral-naming.js",
+    "show:observation": "node ./scripts/show-latest-observation.js"
   }
 }
