--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:cccc": "node ./scripts/validate-cccc-structure.js",
     "test:growth": "node ./scripts/validate-growth-patterns.js",
     "lint:tetrahedral": "node ./scripts/check-tetrahedral-naming.js",
-    "show:observation": "node ./scripts/show-latest-observation.js"
+    "show:observation": "node ./scripts/show-latest-observation.js",
+    "advance:temporal": "node ./scripts/advance-temporal-marker.js"
   }
 }
 
